Fixed horizontal scrolling

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -104,7 +104,7 @@
     /* height: 50px; */
     margin-left: 19px;
     /* margin-right: 19px; */
-    margin-left: 73px;
+    /* margin-left: 73px; */
   }
 }
 
